--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,14 @@
     }
   ],
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "psr/simple-cache": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0"
+  },
+  "provide": {
+      "psr/simple-cache-implementation": "1.0"
   },
   "autoload": {
     "psr-4": {
