--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
+    "php": ">=7.1",
     "ext-soap": "*",
     "psr/simple-cache": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0"
+    "phpunit/phpunit": "^6.3|^7.0"
   },
   "provide": {
       "psr/simple-cache-implementation": "1.0"
