--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "psr/simple-cache": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.3|^7.0"
+    "phpunit/phpunit": "^7.5"
   },
   "provide": {
       "psr/simple-cache-implementation": "1.0"
