--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "dannyvankooten/vat.php",
+  "name": "aurel282/vat.php",
   "description": "PHP library for dealing with VAT in Europe",
   "keywords": ["vat"],
   "license": "MIT",
