--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5"
+    "phpunit/phpunit": "^7.5",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
     "psr-4": {
