--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
   "require": {
     "php": ">=7.3",
     "ext-curl": "*",
-    "ext-json": "*",
-    "ext-soap": "*"
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
