throw exception when rates file contains content that could not be unserialized

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,9 +5,9 @@
          beStrictAboutOutputDuringTests="true"
          bootstrap="vendor/autoload.php"
          colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
+         convertErrorsToExceptions="false"
+         convertNoticesToExceptions="false"
+         convertWarningsToExceptions="false"
          failOnRisky="true"
          failOnWarning="true"
          processIsolation="false"
