--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,7 @@ on: [ push, pull_request ]
 jobs:
   coding-standards:
     name: "Coding Standards"
-    runs-on: "ubuntu-20.04"
-
-    strategy:
-      matrix:
-        php-version:
-          - "8.2"
-
+    runs-on: "ubuntu-latest"
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v2"
@@ -20,7 +14,7 @@ jobs:
         uses: "shivammathur/setup-php@v2"
         with:
           coverage: "none"
-          php-version: "${{ matrix.php-version }}"
+          php-version: "8.3"
           tools: "cs2pr"
 
       - name: "Install dependencies with Composer"
@@ -32,14 +26,11 @@ jobs:
   tests:
     name: "Tests"
     runs-on: "ubuntu-20.04"
-
     strategy:
       matrix:
         php-version:
-          - "8.1"
           - "8.2"
           - "8.3"
-
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v2"
