--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,29 +3,8 @@ name: Build
 on: [ push, pull_request ]
 
 jobs:
-  coding-standards:
-    name: "Coding Standards"
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v2"
-
-      - name: "Install PHP"
-        uses: "shivammathur/setup-php@v2"
-        with:
-          coverage: "none"
-          php-version: "8.3"
-          tools: "cs2pr"
-
-      - name: "Install dependencies with Composer"
-        uses: "ramsey/composer-install@v2"
-
-      - name: "Run PHP_CodeSniffer"
-        run: "vendor/bin/phpcs -n -s --report=checkstyle | cs2pr"
-
   tests:
-    name: "Tests"
-    runs-on: "ubuntu-20.04"
+    runs-on: "ubuntu-latest"
     strategy:
       matrix:
         php-version:
@@ -39,9 +18,14 @@ jobs:
         uses: "shivammathur/setup-php@v2"
         with:
           php-version: "${{ matrix.php-version }}"
+          tools: "cs2pr"
 
       - name: "Install dependencies with Composer"
         uses: "ramsey/composer-install@v2"
+
+      - name: "Run phpcs"
+        if: ${{ matrix.php-version == '8.3' }}
+        run: "vendor/bin/phpcs -n -s --report=checkstyle | cs2pr"
 
       - name: "Run PHPUnit"
         run: "vendor/bin/phpunit"
