--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Build
 
-on: [ push, pull_request ]
-
+on:
+  - pull_request
+  - push
 jobs:
   tests:
     runs-on: "ubuntu-latest"
@@ -12,7 +13,7 @@ jobs:
           - "8.3"
     steps:
       - name: "Checkout"
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v4"
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
@@ -23,9 +24,8 @@ jobs:
       - name: "Install dependencies with Composer"
         uses: "ramsey/composer-install@v2"
 
-      - name: "Run phpcs"
-        if: ${{ matrix.php-version == '8.3' }}
-        run: "vendor/bin/phpcs -n -s --report=checkstyle | cs2pr"
+      - name: "Run PHP CS Fixer"
+        run: "./vendor/bin/php-cs-fixer fix --format checkstyle | cs2pr"
 
       - name: "Run PHPUnit"
         run: "vendor/bin/phpunit"
