--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
+    "php": ">=8.2",
     "ext-curl": "*",
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3.5"
+    "phpunit/phpunit": "^11.1",
+    "friendsofphp/php-cs-fixer": "^3.54"
   },
   "autoload": {
     "psr-4": {
@@ -35,5 +35,8 @@
   "suggest": {
     "ibericode/vat-bundle": "Symfony bundle for integrating this package",
     "ext-soap": "Needed to support VIES VAT number validation"
+  },
+  "scripts": {
+    "check-syntax": "find . -name '*.php' -not -path './vendor/*' -print0 | xargs -0 -n1 php --define error_reporting=-1 -l"
   }
 }
